--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -41,16 +41,16 @@
                     <a href="https://www.instagram.com/salaheddineelykb28/" target="_blank"><i class="bx bxl-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/salah-eddine-el-yaakouby-17267431a/" target="_blank"><i class="bx bxl-linkedin"></i></a>
                 </div>
-                <a href="../EL YAAKOUBY.pdf" class="btn" download="EL YAAKOUBY.pdf">Download Cv</a>
+                <a href="EL YAAKOUBY.pdf" class="btn" download="EL YAAKOUBY.pdf">Download Cv</a>
         </div>
         <div class="home-img">
-            <img src="../image/photo.jpg" alt="photo">
+            <img src="image/photo.jpg" alt="photo">
         </div>
     </section>
     <!--about section design-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="../image/photo.jpg" alt="" srcset="">
+            <img src="image/photo.jpg" alt="" srcset="">
             <div class="about-content">
                 <h2 class="heading">Sur <span>Moi</span></h2>
                 <h3>Développeur Full Stack</h3>
