--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="js/script.js"></script>
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <div id="loading">
@@ -80,15 +80,22 @@
                     à la mise en œuvre de solutions backend robustes. Notre équipe utilise les dernières technologies et frameworks pour
                     créer des expériences utilisateur exceptionnelles et des applications performantes.</p>
             </div>
-        </div>
-    </section>
-    <!--portfolio section design-->
-    <section class="portfolio" id="portfolio">
-        <h2 class="heading">Dernier <span>Projet</span></h2>
-        <div class="portfolio-container">
-            <div class="portfolio-box">
+            <div class="services-box">
+                <i class="bx bx-desktop"></i>
+                <h3>Développement d’Applications</h3>
+                <p>Je développe des applications de bureau fonctionnelles et ergonomiques en utilisant des outils performants.
+                    Chaque projet est conçu pour offrir une navigation fluide et une expérience utilisateur optimisée.</p>
+                <a href="#" class="btn">En savoir plus</a>
+            </div>
+            <div class="services-box">
+                <i class="bx bx-cart"></i>
+                <h3>E-commerce & Dropshipping</h3>
+                <p>Je vous accompagne dans la création et l'optimisation de votre boutique en ligne, en vous aidant à sélectionner
+                    les meilleurs produits et en mettant en place des stratégies efficaces pour booster vos ventes.</p>
+                <a href="#" class="btn">En savoir plus</a>
             </div>
         </div>
     </section>
+    <!--portfolio section design-->
 </body>
 </html>
