--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="">Portfolio</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
@@ -79,6 +78,7 @@
                 <p>Nous offrons des services de développement web complets, allant de la conception de sites web interactifs et réactifs
                     à la mise en œuvre de solutions backend robustes. Notre équipe utilise les dernières technologies et frameworks pour
                     créer des expériences utilisateur exceptionnelles et des applications performantes.</p>
+                <a href="#" class="btn">En savoir plus</a>
             </div>
             <div class="services-box">
                 <i class="bx bx-desktop"></i>
