--- a/contact.html
+++ b/contact.html
@@ -330,11 +330,11 @@
 
 <body>
     <header class="header">
-        <a href="html/index.html" class="logo">SALAH EDDINE EL YAAKOUBY</a>
+        <a href="index.html" class="logo">SALAH EDDINE EL YAAKOUBY</a>
         <i class="bx bx-menu" id="menu-icon"></i>
         <nav class="navbar">
             <ul>
-                <li><a href="html/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
